--- a/tnuniv/src/app/app.component.html
+++ b/tnuniv/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<button mat-raised-button color="primary">Primary</button>
+<div class="container">
+    <app-navbar></app-navbar>
+</div>
