--- a/tnuniv/src/sass/styles.scss
+++ b/tnuniv/src/sass/styles.scss
@@ -3,3 +3,24 @@
 @import './variables';
 @import './mixins';
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
+* {
+    margin: 0;
+    padding: 0;
+}
+
+*,
+*::after,
+*::before {
+    box-sizing: inherit;
+}
+
+html {
+    box-sizing: border-box;
+    font-size: 62.5% // 1rem=10px
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    line-height: 1.6;
+}
