--- a/tnuniv/src/app/navbar/navbar.component.html
+++ b/tnuniv/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <img src="assets/img/logo.png" alt="logo" class="logo">
 
     <ul class="menu">
-        <li class="menu__item">
+        <li class="menu__item active">
             <a href="#" class="menu__item__link">Home</a>
         </li>
         <li class="menu__item">
@@ -18,11 +18,6 @@
         </button>
     </form>
     <nav class="user-nav">
-        <div class="user-nav__icon-box">
-            <svg class="user-nav__nav-icon">
-                <use xlink:href="assets/img/symbol.svg#icon-people"></use>
-            </svg>
-        </div>
         <div class="user-nav__icon-box">
             <svg class="user-nav__nav-icon">
                 <use xlink:href="assets/img/symbol.svg#icon-message"></use>
