--- a/tnuniv/src/sass/_variables.scss
+++ b/tnuniv/src/sass/_variables.scss
@@ -1,1 +1,3 @@
-$color-primary:#61538E;
+$color-primary:#61538E; //navbar
+$color-grey-1:#F6F6F9; //menu search nav
+$color-primary-red:rgb(218, 59, 59); //notification
