--- a/tnuniv/src/app/navbar/navbar.component.scss
+++ b/tnuniv/src/app/navbar/navbar.component.scss
@@ -124,6 +124,7 @@ header {
     }
     &__notification {
         font-size: .9rem;
+        font-weight: 600;
         height: 1.7rem;
         width: 1.7rem;
         border-radius: 50%;
