--- a/tnuniv/src/sass/_variables.scss
+++ b/tnuniv/src/sass/_variables.scss
@@ -1,3 +1,3 @@
 $color-primary:#61538E; //navbar
-$color-grey-1:#F6F6F9; //menu search nav
+$color-grey-1:rgb(250, 250, 250); //menu search nav
 $color-primary-red:rgb(226, 29, 62); //notification
