--- a/tnuniv/src/app/app.component.html
+++ b/tnuniv/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="container">
+<div class="wrap">
     <app-navbar></app-navbar>
+    <app-home></app-home>
 </div>
