--- a/tnuniv/src/sass/_variables.scss
+++ b/tnuniv/src/sass/_variables.scss
@@ -1,3 +1,4 @@
 $color-primary:#61538E; //navbar
 $color-grey-1:rgb(250, 250, 250); //menu search nav
 $color-primary-red:rgb(226, 29, 62); //notification
+$color-bg-grey-1:#F2F2F6;
