--- a/tnuniv/src/sass/styles.scss
+++ b/tnuniv/src/sass/styles.scss
@@ -3,6 +3,7 @@
 @import './variables';
 @import './mixins';
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
+@import '~bootstrap/dist/css/bootstrap.min.css';
 * {
     margin: 0;
     padding: 0;
@@ -23,4 +24,5 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     line-height: 1.6;
+    background-color: $color-bg-grey-1;
 }
