fix subj component

--- a/tnuniv/src/app/home/subj/subj.component.html
+++ b/tnuniv/src/app/home/subj/subj.component.html
@@ -1,3 +1,56 @@
-<p>
-  subj works!
-</p>
+<div class="subj-card">
+    <!-- --------------ELEMENT------------------>
+    <div class="subj-card__elm">
+        <img src="assets/img/java.png" alt="" class="subj-card__elm__img">
+        <div class="subj-card__elm__desc">
+            <div class="subj-card__elm__name">java</div>
+            <div class="subj-card__elm__count"><span class="subj-card__elm__count__nmbr">1</span>New Posts</div>
+        </div> <span class="subj-card__elm__new">3</span>
+    </div>
+    <!-- --------------/ELEMENT------------------>
+    <!-- --------------ELEMENT------------------>
+    <div class="subj-card__elm">
+        <img src="assets/img/web.png" alt="" class="subj-card__elm__img">
+        <div class="subj-card__elm__desc">
+            <div class="subj-card__elm__name">Dev Web</div>
+            <div class="subj-card__elm__count"><span class="subj-card__elm__count__nmbr">2</span>New Posts</div>
+        </div> <span class="subj-card__elm__new">7</span>
+    </div>
+    <!-- --------------/ELEMENT------------------>
+    <!-- --------------ELEMENT------------------>
+    <div class="subj-card__elm">
+        <img src="assets/img/bot.png" alt="" class="subj-card__elm__img">
+        <div class="subj-card__elm__desc">
+            <div class="subj-card__elm__name">AI</div>
+            <div class="subj-card__elm__count"><span class="subj-card__elm__count__nmbr">8</span>New Posts</div>
+        </div> <span class="subj-card__elm__new">3</span>
+    </div>
+    <!-- --------------/ELEMENT------------------>
+    <!-- --------------ELEMENT------------------>
+    <div class="subj-card__elm">
+        <img src="assets/img/collaboration.png" alt="" class="subj-card__elm__img">
+        <div class="subj-card__elm__desc">
+            <div class="subj-card__elm__name">Réseau</div>
+            <div class="subj-card__elm__count"><span class="subj-card__elm__count__nmbr">12</span>New Posts</div>
+        </div> <span class="subj-card__elm__new">13</span>
+    </div>
+    <!-- --------------/ELEMENT------------------>
+    <!-- --------------ELEMENT------------------>
+    <div class="subj-card__elm">
+        <img src="assets/img/shield.png" alt="" class="subj-card__elm__img">
+        <div class="subj-card__elm__desc">
+            <div class="subj-card__elm__name">Sécurté informatique</div>
+            <div class="subj-card__elm__count"><span class="subj-card__elm__count__nmbr">7</span>New Posts</div>
+        </div> <span class="subj-card__elm__new">9</span>
+    </div>
+    <!-- --------------/ELEMENT------------------>
+    <!-- --------------ELEMENT------------------>
+    <div class="subj-card__elm">
+        <img src="assets/img/shield.png" alt="" class="subj-card__elm__img">
+        <div class="subj-card__elm__desc">
+            <div class="subj-card__elm__name">Sécurté informatique</div>
+            <div class="subj-card__elm__count"><span class="subj-card__elm__count__nmbr">7</span>New Posts</div>
+        </div> <span class="subj-card__elm__new">9</span>
+    </div>
+    <!-- --------------/ELEMENT------------------>
+</div>
