--- a/tnuniv/src/sass/_variables.scss
+++ b/tnuniv/src/sass/_variables.scss
@@ -1,4 +1,5 @@
 $color-primary:#61538E; //navbar
+$color-primary-2:#594C81; // subjt
 $color-grey-1:rgb(250, 250, 250); //menu search nav
 $color-primary-red:rgb(226, 29, 62); //notification
 $color-bg-grey-1:#F2F2F6;
