--- a/tnuniv/src/app/home/subj/subj.component.scss
+++ b/tnuniv/src/app/home/subj/subj.component.scss
@@ -14,6 +14,7 @@
         margin: 1.5rem;
         margin-bottom: -2rem;
         position: relative;
+        cursor: pointer;
         &__icon {
             position: relative;
         }
@@ -49,4 +50,8 @@
     width: 6.20rem;
     background-color: $color-primary-2;
     border-radius: 5px 0 0 5px;
+}
+
+.subj-card::before::hover {
+    width: 20rem;
 }
