add news component

--- a/tnuniv/src/app/home/subj/element/element.component.html
+++ b/tnuniv/src/app/home/subj/element/element.component.html
@@ -1,6 +1,6 @@
 <!-- --------------ELEMENT------------------>
 <div class="subj-card__elm">
-    <img src="assets/img/java.png" alt="" class="subj-card__elm__img">
+    <img src="assets/img/web.png" alt="" class="subj-card__elm__img">
     <div class="subj-card__elm__desc">
         <div class="subj-card__elm__name">java</div>
         <div class="subj-card__elm__count"><span class="subj-card__elm__count__nmbr">1</span>New Posts</div>
