--- a/tnuniv/src/app/home/subj/subj.component.scss
+++ b/tnuniv/src/app/home/subj/subj.component.scss
@@ -3,7 +3,7 @@
 .subj-card {
     background-color: $color-primary;
     border-radius: 5px;
-    width: 250px;
+    width: 20%;
     color: white;
     position: relative;
     margin: 30px;
