--- a/tnuniv/src/app/app.component.html
+++ b/tnuniv/src/app/app.component.html
@@ -1,5 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <div class="wrap">
     <app-navbar></app-navbar>
-    <app-home></app-home>
+    <router-outlet></router-outlet>
 </div>
