--- a/tnuniv/src/app/navbar/navbar.component.html
+++ b/tnuniv/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
             <a [routerLink]="['/home']" routerLinkActive="active" class="menu__item__link">Home</a>
         </li>
         <li class="menu__item">
-            <a [routerLink]="['/findfriends']" routerLinkActive="active" class="menu__item__link">Find Friends</a>
+            <a [routerLink]="['/find-friends']" routerLinkActive="active" class="menu__item__link">Find Friends</a>
         </li>
     </ul>
     <form action="#" class="search">
