dialogue for news

--- a/tnuniv/src/app/home/news/news-elm/news-elm.component.html
+++ b/tnuniv/src/app/home/news/news-elm/news-elm.component.html
@@ -2,7 +2,7 @@
     <svg class="news-elm__news-icon">
     <use xlink:href="assets/img/symbol.svg#icon-notification1"></use>
 </svg>
-    <div class="news-elm__news-content">
-        The JEE courses will start on February 2, 2019 at 8:30 am in the AP1 amphitheater ...
-    </div>
+    <button (click)="openDialog()" class="news-elm__news-content">
+       The JEE courses will start on February 2, 2019 at 8:30 am in the AP1 amphitheater ...
+    </button>
 </div>
