--- a/tnuniv/src/app/home/news/news.component.html
+++ b/tnuniv/src/app/home/news/news.component.html
@@ -2,6 +2,8 @@
     <div class="news-card__title">News</div>
     <app-news-elm></app-news-elm>
     <app-news-elm></app-news-elm>
+    <app-news-elm></app-news-elm>
+    <app-news-elm></app-news-elm>
 
 
 </div>
