add dialog tweaks

--- a/tnuniv/src/app/home/home.component.html
+++ b/tnuniv/src/app/home/home.component.html
@@ -1,4 +1,9 @@
 <div class="wrapper">
-    <app-subj></app-subj>
-    <app-news></app-news>
+    <div class="home-container">
+        <div class="home-container__left-side">
+            <app-subj></app-subj>
+            <app-news></app-news>
+        </div>
+
+    </div>
 </div>
