add add-post componen

--- a/tnuniv/src/app/home/home.component.html
+++ b/tnuniv/src/app/home/home.component.html
@@ -4,6 +4,9 @@
             <app-subj></app-subj>
             <app-news></app-news>
         </div>
+        <div class="home-container__main">
+            <app-add-post></app-add-post>
+        </div>
 
     </div>
 </div>
