--- a/tnuniv/src/app/home/news/news-elm/dialoge/dialoge.component.html
+++ b/tnuniv/src/app/home/news/news-elm/dialoge/dialoge.component.html
@@ -2,16 +2,8 @@
 <mat-dialog-content class="mat-typography">
     <h3>Hello SRT M1</h3>
     <p>The JEE courses will start on February 2, 2019 at 8:30 am in the AP1 amphitheater.Given the importance of the first chapter, we sincerely hope everyone will be there. Thank you very much for your consideration.</p>
-
-
-
-
-
-
-
-
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Close</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Save News</button>
+    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Save</button>
 </mat-dialog-actions>
