--- a/tnuniv/src/app/home/news/news-elm/news-elm.component.html
+++ b/tnuniv/src/app/home/news/news-elm/news-elm.component.html
@@ -3,6 +3,6 @@
     <use xlink:href="assets/img/symbol.svg#icon-notification1"></use>
 </svg>
     <button (click)="openDialog()" class="news-elm__news-content">
-       The JEE courses will start on February 2, 2019 at 8:30 am in the AP1 amphitheater ...
+       The JEE courses will start on February 2, 2019 at 8:30 am
     </button>
 </div>
