--- a/tnuniv/src/app/navbar/navbar.component.scss
+++ b/tnuniv/src/app/navbar/navbar.component.scss
@@ -123,6 +123,9 @@ header {
     }
     &__icon-box {
         position: relative;
+        border: none;
+        background-color: transparent;
+        outline: none;
     }
     &__nav-icon {
         height: 1.8rem;
