--- a/tnuniv/src/sass/_variables.scss
+++ b/tnuniv/src/sass/_variables.scss
@@ -4,4 +4,5 @@ $color-grey-1:rgb(250, 250, 250); //menu search nav
 $color-primary-red:rgb(226, 29, 62); //notification
 $color-bg-grey-1:#F2F2F6;
 $color-text-dark-1:#4B546B; //news card title
-$color-grey-2:#79787E
+$color-grey-2:#79787E;
+$color-grey-3:#F2F2F6; //menu search nav
