--- a/tnuniv/src/app/home/add-post/add-post.component.scss
+++ b/tnuniv/src/app/home/add-post/add-post.component.scss
@@ -61,10 +61,35 @@
                 float: left;
                 &__icon:hover {
                     cursor: pointer;
+                    -webkit-touch-callout: none;
+                    /* iOS Safari */
+                    -webkit-user-select: none;
+                    /* Safari */
+                    -khtml-user-select: none;
+                    /* Konqueror HTML */
+                    -moz-user-select: none;
+                    /* Firefox */
+                    -ms-user-select: none;
+                    /* Internet Explorer/Edge */
+                    user-select: none;
+                    /* Non-prefixed version, currently*/
                 }
                 &>input {
                     display: none;
                 }
             }
+        }
+    }
+    
+    #blah {
+        opacity: 0.6;
+        width: 80px;
+        height: 80px;
+        margin: 0.5rem 0 1.5rem 1.25rem;
+        border-radius: 5px;
+        transition: 0.4s;
+        &:hover {
+            cursor: pointer;
+            opacity: 1;
         }
     }
