--- a/tnuniv/src/app/home/posts/add-post/add-post.component.scss
+++ b/tnuniv/src/app/home/posts/add-post/add-post.component.scss
@@ -17,7 +17,7 @@
             &__input {
                 resize: none;
                 font-family: inherit;
-                font-size: 1.25rem;
+                font-size: 1.5rem;
                 color: inherit;
                 margin: 1.5rem;
                 border: none;
@@ -51,7 +51,7 @@
                 margin: 0 1.5rem 1rem 0;
                 float: right;
                 background-color: $color-primary;
-                color: $color-grey-1;
+                color: white;
                 font-size: 1.25rem;
             }
             &__image-upload {
@@ -59,7 +59,13 @@
                 margin-left: 1.5rem;
                 opacity: 0.4;
                 float: left;
+                transition: 0.4s;
+                &__icon {
+                    opacity: 0.5;
+                    transition: 0.4s;
+                }
                 &__icon:hover {
+                    opacity: 1;
                     cursor: pointer;
                     -webkit-touch-callout: none;
                     /* iOS Safari */
@@ -82,14 +88,15 @@
     }
     
     #blah {
-        opacity: 0.6;
-        width: 80px;
-        height: 80px;
+        opacity: 0.7;
+        width: 17%;
+        height: 85px;
         margin: 0.5rem 0 1.5rem 1.25rem;
         border-radius: 5px;
-        transition: 0.4s;
+        transition: 0.6s ease;
         &:hover {
-            cursor: pointer;
+            cursor: -webkit-grab;
+            cursor: grab;
             opacity: 1;
         }
     }
