--- a/tnuniv/src/app/home/subj/element/element.component.html
+++ b/tnuniv/src/app/home/subj/element/element.component.html
@@ -4,6 +4,6 @@
     <div class="subj-card__elm__desc">
         <div class="subj-card__elm__name">java</div>
         <div class="subj-card__elm__count"><span class="subj-card__elm__count__nmbr">1</span>New Posts</div>
-    </div> <span class="subj-card__elm__new">3</span>
+    </div>
 </div>
 <!-- --------------/ELEMENT------------------>
