add post works for only the content

--- a/tnuniv/src/app/home/posts/post/post.component.html
+++ b/tnuniv/src/app/home/posts/post/post.component.html
@@ -14,7 +14,7 @@
         <div class="post-card__time">2 min</div>
     </div>
     <div class="post-card__main">
-        #présentiel <br> Bonjour à tous,<br> Je vous informe qu'on n'aura pas une séance de cours demain le 04/02/2019.
+        {{p.content} }
     </div>
     <div class="post-card__pics">
         <img class="post-card__pic" src="" alt="">
