--- a/tnuniv/src/app/home/home.component.html
+++ b/tnuniv/src/app/home/home.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="home-container__main">
             <app-add-post></app-add-post>
-            <app-post></app-post>
+            <app-post *ngFor="let postt of postar" [p]="postt"></app-post>
         </div>
     </div>
 </div>
