--- a/tnuniv/src/app/home/posts/add-post/add-post.component.scss
+++ b/tnuniv/src/app/home/posts/add-post/add-post.component.scss
@@ -3,7 +3,7 @@
     .add-post-card {
         background-color: white;
         border-radius: 5px;
-        width: 80%;
+        width: 535px;
         color: $color-text-dark-1;
         position: relative;
         margin-left: 2rem;
