--- a/tnuniv/src/sass/styles.scss
+++ b/tnuniv/src/sass/styles.scss
@@ -25,6 +25,7 @@ body {
     font-weight: 400;
     line-height: 1.6;
     background-color: $color-bg-grey-1;
+    margin-bottom: 50px;
 }
 
 .wrapper {
