break line add post

--- a/tnuniv/src/app/home/posts/post/post.component.scss
+++ b/tnuniv/src/app/home/posts/post/post.component.scss
@@ -64,6 +64,7 @@
         font-size: 1.5rem;
         color: rgb(61, 61, 63);
         margin-bottom: 3rem;
+        white-space: pre-line
     }
     &__pic {
         width: 133.75px;
