--- a/tnuniv/src/app/navbar/navbar.component.html
+++ b/tnuniv/src/app/navbar/navbar.component.html
@@ -8,6 +8,9 @@
         <li class="menu__item">
             <a [routerLink]="['/find-friends']" routerLinkActive="active" class="menu__item__link">Find Friends</a>
         </li>
+        <li class="menu__item">
+            <a href="assets/img/design.png" class="menu__item__link" target="_blank">Our design</a>
+        </li>
     </ul>
     <form action="#" class="search">
         <input type="text" class="search__input" placeholder="Search">
